; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ti/wlcore/extr_init.c_wl1271_set_ba_policies.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ti/wlcore/extr_init.c_wl1271_set_ba_policies.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wl1271 = type { i64 }
%struct.wl12xx_vif = type { i32, i64, i32 }

@BSS_TYPE_AP_BSS = common dso_local global i64 0, align 8
@BSS_TYPE_STA_BSS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.wl1271*, %struct.wl12xx_vif*)* @wl1271_set_ba_policies to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wl1271_set_ba_policies(%struct.wl1271* %0, %struct.wl12xx_vif* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.wl1271*, align 8
  %5 = alloca %struct.wl12xx_vif*, align 8
  store %struct.wl1271* %0, %struct.wl1271** %4, align 8
  store %struct.wl12xx_vif* %1, %struct.wl12xx_vif** %5, align 8
  %6 = load %struct.wl12xx_vif*, %struct.wl12xx_vif** %5, align 8
  %7 = getelementptr inbounds %struct.wl12xx_vif, %struct.wl12xx_vif* %6, i32 0, i32 0
  store i32 1, i32* %7, align 8
  %8 = load %struct.wl1271*, %struct.wl1271** %4, align 8
  %9 = getelementptr inbounds %struct.wl1271, %struct.wl1271* %8, i32 0, i32 0
  store i64 0, i64* %9, align 8
  %10 = load %struct.wl12xx_vif*, %struct.wl12xx_vif** %5, align 8
  %11 = getelementptr inbounds %struct.wl12xx_vif, %struct.wl12xx_vif* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @BSS_TYPE_AP_BSS, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %24

15:                                               ; preds = %2
  %16 = load %struct.wl12xx_vif*, %struct.wl12xx_vif** %5, align 8
  %17 = getelementptr inbounds %struct.wl12xx_vif, %struct.wl12xx_vif* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @BSS_TYPE_STA_BSS, align 8
  %20 = icmp ne i64 %18, %19
  br i1 %20, label %21, label %24

21:                                               ; preds = %15
  %22 = load %struct.wl12xx_vif*, %struct.wl12xx_vif** %5, align 8
  %23 = getelementptr inbounds %struct.wl12xx_vif, %struct.wl12xx_vif* %22, i32 0, i32 2
  store i32 0, i32* %23, align 8
  store i32 0, i32* %3, align 4
  br label %30

24:                                               ; preds = %15, %2
  %25 = load %struct.wl12xx_vif*, %struct.wl12xx_vif** %5, align 8
  %26 = getelementptr inbounds %struct.wl12xx_vif, %struct.wl12xx_vif* %25, i32 0, i32 2
  store i32 1, i32* %26, align 8
  %27 = load %struct.wl1271*, %struct.wl1271** %4, align 8
  %28 = load %struct.wl12xx_vif*, %struct.wl12xx_vif** %5, align 8
  %29 = call i32 @wl12xx_acx_set_ba_initiator_policy(%struct.wl1271* %27, %struct.wl12xx_vif* %28)
  store i32 %29, i32* %3, align 4
  br label %30

30:                                               ; preds = %24, %21
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i32 @wl12xx_acx_set_ba_initiator_policy(%struct.wl1271*, %struct.wl12xx_vif*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
